# K40

NoiseProcesser/: CMakeLists.txt  README.md
NoiseProcesser/app/: NoiseProcesser.cc  run.sh
NoiseProcesser/config/: PMT_QE.csv  SiPM_PDE.csv
NoiseProcesser/include/: Event_processer.hpp  K40_processer.hpp
NoiseProcesser/src/: DarkNoise_processer.cpp  Event_porcesser.cpp  K40_processer.cpp
NoiseProcessor/: CMakeLists.txt  README.md
NoiseProcessor/app/: NoiseProcessor.cc  run.sh
NoiseProcessor/config/: noiseconfig.yaml
NoiseProcessor/include/: DarkNoise_processor.hpp  Event_processor.hpp  K40_processor.hpp
NoiseProcessor/src/: DarkNoise_processor.cpp  Event_porcessor.cpp  K40_processor.cpp
cppanalysis/script/: CMakeLists.txt  analysis_trigger_root_tts.cpp
cppanalysis/script/calc_gamma_dis_decay/: CMakeLists.txt  analysis_trigger_root_tts.cpp
cppanalysis/script/fix_win_coin_pmt_version/: analysis_trigger_root_tts.cpp
cppanalysis/script/show_r/: CMakeLists.txt  analysis_trigger_root_tts.cpp  angel_between_pmt.cpp  draw_bandwidth.py  onlyr.cpp
cppanalysis/script/wei_decaytime_version/: analysis_trigger_root_tts.cpp  analysis_trigger_root_tts.h
cppanalysis/store/: binsong_qe.csv  km3_qe.csv  qe.csv
fast_K40_gen/: CMakeLists.txt
fast_K40_gen/app/: gen_k40.cc
fast_K40_gen/config/: config.yaml
fast_K40_gen/include/: K40_generation.hpp
fast_K40_gen/src/: K40_generation.cpp
k40_oneDOM_execu_version/: CMakeLists.txt  README.md  main.cc
k40_oneDOM_execu_version/config/: config.yaml  hailing_optical_properties.yaml
k40_oneDOM_execu_version/include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  TrackerHit.hh  TrackerSD.hh
k40_oneDOM_execu_version/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  TrackerHit.cc  TrackerSD.cc
k40_oneDOM_execu_version/tmp/: DetectorConstruction.cc
